--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  </head>
+  <body>
+
 <h2>
 	Web Site Terms and Conditions of Use
 </h2>
@@ -120,3 +128,5 @@
 <p>
 	We are focused on leading our business as per these standards with a specific end goal to guarantee that the privacy of individual data is secure and maintained. 
 </p>
+</body>
+</html>
